# WeatherKrd

./: README.md  config.py  menu_for_telegram_bot.xmind  pyproject.toml  Копия_блокнота_"Продвинутый_блок_|_Генетические_алгоритмы_Введение_Базовые_принципы_|_ДЗ_Light_|_УИИ".ipynb  сайты.txt
workfiles/: bot.py  descriptions.txt  map_for_telegram_bot.xmind  other.py  parser_weather.py
